--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.9.0",
@@ -25,6 +26,7 @@
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^2.15.3",
