--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint:mem": "NODE_OPTIONS='--max-old-space-size=4096' eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -22,6 +25,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.507.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
@@ -30,7 +34,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
