--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@nivo/treemap": "^0.99.0",
+    "@nivo/waffle": "^0.99.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.3.7",
@@ -40,7 +42,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "victory": "^37.3.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.32.1",
