--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint:mem": "NODE_OPTIONS='--max-old-space-size=4096' eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.6",
@@ -28,8 +30,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.507.0",
     "next": "^15.3.2",
+    "npm": "^11.4.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
