--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.2",
