--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.2.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "10.4.14",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +39,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.2",
